--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,13 @@
 			<artifactId>iyzipay-java</artifactId>
 			<version>2.0.133</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.retry/spring-retry -->
+		<dependency>
+			<groupId>org.springframework.retry</groupId>
+			<artifactId>spring-retry</artifactId>
+			<version>2.0.11</version>
+		</dependency>
 	</dependencies>
 
 	<build>
