--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
+
 spring:
   application:
     name: e-commerce-basic
-
 
   # http://localhost:8080/oauth2/authorization/google
   # Datasource Configuration (Veritabanı Bağlantısı)
@@ -58,4 +58,6 @@ payment:
     callBack: /api/v1/payment/payCallBack
 
 domain:
-  test: https://litysofttest1.site
+  test: https://litysofttest.site
+server:
+  port: 8083
