--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -27,7 +27,7 @@ logging:
 upload:
   file:
     dir: /var/www/upload/ecommerce/
-    url: https://litysofttest1.site/api/v1/upload/
+    url: https://litysofttest.site/api/v1/upload/
     product:
       size: 10485760
 
@@ -56,4 +56,7 @@ payment:
     callBack: /api/v1/payment/payCallBack
 
 domain:
-  test: https://litysofttest1.site
+  test: https://litysofttest.site
+
+server:
+  port: 8083
