order service create düzenlendi

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,29 @@
 services:
-  e-commerce-backend-v1:
+  backend-e-commerce:
     build:
       context: .
-    container_name: e-commerce-backend-v1
+    container_name: backend-e-commerce
     depends_on:
-      - e-commerce-database
+      - database-e-commerce
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://e-commerce-database:5432/ecommercebackend
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://database-e-commerce:5432/ecommercebackend
     ports:
-      - "8080:8080"
+      - "8083:8083"
     volumes:
       - /var/www/upload:/var/www/upload
     networks:
       - mynetwork
 
-  e-commerce-database:
+  database-e-commerce:
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 5s
       timeout: 5s
       retries: 5
     image: postgres
-    container_name: e-commerce-database
+    container_name: database-e-commerce
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
@@ -32,6 +32,14 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data  # 🔥 Kalıcı veri deposu ekledik
+    networks:
+      - mynetwork
+
+  redis-e-commerce:
+    image: redis:alpine
+    container_name: redis-e-commerce
+    ports:
+      - "6379:6379"
     networks:
       - mynetwork
 
