--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -20,7 +20,7 @@ spring:
 
   data:
     redis:
-      host: localhost
+      host: redis-e-commerce
       port: 6379
       database: 0
 
@@ -35,7 +35,7 @@ logging:
 upload:
   file:
     dir: /var/www/upload/ecommerce/
-    url: http://localhost:8080/api/v1/upload/
+    url: http://localhost:8083/api/v1/upload/
     product:
       size: 10485760
 
@@ -64,7 +64,7 @@ payment:
     callBack: /api/v1/payment/payCallBack
 
 domain:
-  test: http://localhost:8080
+  test: http://localhost:8083
 server:
   port: 8083
 
