resimler artık masaüstüne ekleniyor docker compose ile containera volume bağlantısı yapıldı

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "8083:8083"
     volumes:
-      - /var/www/upload:/var/www/upload
+      - "${HOST_UPLOAD_PATH}:/var/www/upload/ecommerce"
     networks:
       - mynetwork
 
