--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,16 @@
 
 	<build>
 		<plugins>
+			<!-- DOĞRU PLUGIN: maven-compiler-plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>${java.version}</source> <!-- Java sürümüne göre 11, 17, 21 olabilir -->
+					<target>${java.version}</target>
+					<parameters>true</parameters>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
