--- a/pom.xml
+++ b/pom.xml
@@ -132,8 +132,10 @@
 			<artifactId>unirest-java</artifactId>
 			<version>3.13.10</version>
 		</dependency>
-
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
 	</dependencies>
 
