--- a/src/main/resources/application-prodcreate.yml
+++ b/src/main/resources/application-prodcreate.yml
@@ -27,8 +27,8 @@ spring:
 
   data:
     redis:
-      host: localhost
-      port: 6379
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
       database: 0
 
 logging:
