--- a/src/main/resources/application-prodcreate.yml
+++ b/src/main/resources/application-prodcreate.yml
@@ -3,6 +3,12 @@ spring:
     name: e-commerce-basic
 
 
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 10MB
+
+
   # http://localhost:8080/oauth2/authorization/google
   # Datasource Configuration (Veritabanı Bağlantısı)
   datasource:
@@ -85,3 +91,5 @@ management:
       exposure:
         include: "*"
       base-path: /api/actuator
+
+
