kargo iptal düzenlendi ve ortak kullanılan datalar ayarlandı

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -78,12 +78,11 @@ payment:
 domain:
   test: http://localhost:8083
   name: https://litysofttest1.site
+  namewww: https://www.localhost:8083
+
 
 server:
   port: 8083
-
-mail:
-  from: fatihgs133@gmail.com
 
 management:
   endpoints:
