--- a/src/main/resources/application-prodcreate.yml
+++ b/src/main/resources/application-prodcreate.yml
@@ -77,6 +77,7 @@ payment:
 domain:
   test: https://litysofttest1.site
   name: https://litysofttest1.site
+  namewww: https://www.litysofttest1.site
 
 
 server:
