--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -76,6 +76,12 @@ domain:
   test: https://litysofttest1.site
   name: https://litysofttest1.site
   namewww: https://www.litysofttest1.site
+  geliver: https://api.geliver.io/api/v1
+
+geliver:
+  cargo:
+    test: true
+
 
 
 server:
