--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -37,7 +37,7 @@ spring:
 
 logging:
   pattern:
-    console: ${GULCE_LOGPATTERN_CONSOLE}
+    console: ${GULCE_LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
   level:
     org.springframework.security: ${GULCE_SPRING_SECURITY_LOG_LEVEL}
 
