REdis port eklendi

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -30,7 +30,7 @@ spring:
     redis:
       host: ${REDIS_HOST}
       port: ${REDIS_PORT}
-      database: 0
+      database: ${REDIS_DB:1}
 
 logging:
   pattern:
